# Controllable-Light-Ring

./: CMakeLists.txt  Eye ring.cam  PCB.cam  README.md  design.md  main.c  ring_control.cpp
Eye ring_2026-07-04/CAMOutputs/ODBFiles/eye_ring/: odb_job.odbjob
Eye ring_2026-07-04/PCB Design/Light ring/CAMOutputs/Assembly/: Eye ring.txt  PnP_Eye ring_back.txt  PnP_Eye ring_front.txt
Eye ring_2026-07-04/PCB Design/Light ring/CAMOutputs/DrillFiles/: drill_1_64.xln
Eye ring_2026-07-04/PCB Design/Light ring/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr
PCB_2026-07-04/CAMOutputs/ODBFiles/pcb/: odb_job.odbjob
PCB_2026-07-04/PCB Design/Light ring/CAMOutputs/Assembly/: PCB.txt  PnP_PCB_back.txt  PnP_PCB_front.txt
PCB_2026-07-04/PCB Design/Light ring/CAMOutputs/DrillFiles/: drill_1_16.xln
PCB_2026-07-04/PCB Design/Light ring/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_top.gbr
